// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`length of DropdownItems should be 2 in case of buildah 1`] = `
"<Provider>
   
  <BasicDetails>
    <Card className=\\"hub-header-card\\">
      <article id=\\"\\" className=\\"pf-c-card hub-header-card\\" tabIndex={[undefined]} data-ouia-component-type=\\"PF4/Card\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Card-2\\">
        <Grid className=\\"hub-header-card__margin\\">
          <div className=\\"pf-l-grid hub-header-card__margin\\" style={[undefined]}>
            <GridItem span={1}>
              <div className=\\"pf-l-grid__item pf-m-1-col\\" style={[undefined]}>
                <Grid>
                  <div className=\\"pf-l-grid\\" style={[undefined]}>
                    <GridItem offset={8}>
                      <div className=\\"pf-l-grid__item pf-m-offset-8-col\\" style={[undefined]}>
                        <div className=\\"hub-details-kind-icon\\">
                          <Icon id=\\"build\\" size=\\"xl\\" label=\\"Task\\">
                            <BuildIcon size=\\"xl\\" className=\\"hub-icon\\" label=\\"Task\\" color=\\"currentColor\\" noVerticalAlign={false}>
                              <svg style={{...}} fill=\\"currentColor\\" height=\\"3em\\" width=\\"3em\\" viewBox=\\"0 0 1024 1024\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" className=\\"hub-icon\\" label=\\"Task\\">
                                <path d=\\"M996.377115,171.480135 L540.537115,5.18013521 C531.409589,1.76249044 521.743498,0.00809818406 511.997115,6.72397778e-05 C501.871295,-0.0125134433 491.820803,1.74040061 482.297115,5.18013521 L27.6671155,171.370135 C11.0249457,177.434467 -0.0238641555,193.287629 0.046775475,211.000135 L0.046775475,249.000135 C0.195841208,267.102495 11.623122,283.189328 28.6671155,289.290135 L85.2071155,309.500135 C95.0094893,313.010977 105.907101,311.533188 114.420477,305.53861 C122.933853,299.544031 127.998417,289.782269 127.997115,279.370135 L127.997115,234.580135 L511.997115,95.0001352 L895.177115,235.170135 L895.177115,295.370135 C895.178887,302.102977 898.453489,308.414744 903.95698,312.293243 C909.460471,316.171742 916.505874,317.132839 922.847115,314.870135 L995.477115,289.270135 C1012.59546,283.170258 1024.01857,266.9528 1023.99715,248.780135 L1023.99715,210.870135 C1023.97475,193.258354 1012.96683,177.531031 996.427115,171.480135 M533.647115,346.370135 L511.997115,353.370135 L489.587115,348.080135 C479.853994,344.894147 469.183221,346.571799 460.897291,352.59073 C452.611361,358.609661 447.71662,368.238859 447.737051,378.480135 L447.737051,417.580135 C447.725709,431.081528 456.204913,443.131767 468.917115,447.680135 L499.577115,458.180135 C507.177328,460.919505 515.534404,460.669293 522.957115,457.480135 L554.327115,445.870135 C567.027983,441.306886 575.500688,429.265885 575.507257,415.770135 L575.507257,376.770135 C575.537565,366.523106 570.643619,356.885253 562.352331,350.863869 C554.061043,344.842484 543.381903,343.17069 533.647115,346.370135 M351.737115,359.870135 L351.737115,318.770135 C351.726919,304.92777 342.817563,292.661266 329.657115,288.370135 L265.717115,267.480135 C255.985877,264.299431 245.319589,265.977891 237.035494,271.993509 C228.751399,278.009128 223.854266,287.632278 223.86709,297.870135 L223.86709,337.000135 C223.874371,350.47567 232.322855,362.502666 244.997115,367.080135 L308.937115,390.080135 C318.749212,393.583471 329.652547,392.090624 338.161859,386.078784 C346.67117,380.066943 351.720981,370.28887 351.697115,359.870135 M991.217115,442.000135 L856.317115,394.650135 C852.839791,393.339817 849.00444,393.339817 845.527115,394.650135 L798.077115,411.550135 C783.887115,416.550135 783.887115,436.650135 798.077115,441.650135 L913.157115,483.000135 L511.997115,646.780135 L109.477115,482.780135 L223.867115,441.780135 C237.947115,436.690135 237.947115,416.690135 223.867115,411.690135 L176.607115,394.780135 C173.112329,393.58999 169.321902,393.58999 165.827115,394.780135 L33.1571155,442.370135 C13.0440455,449.54441 -0.269196877,468.728185 0.0471154616,490.080135 L0.0471154616,503.080135 C-0.847277689,523.712017 11.059679,542.763147 29.9971155,551.000135 L476.407115,747.280135 C498.111167,756.808317 522.807966,756.840942 544.537115,747.370135 L802.537115,634.470135 L994.287115,549.930135 C1013.05026,541.718274 1024.80919,522.789452 1023.85712,502.330135 L1023.85712,489.430135 C1024.36395,468.22962 1011.19974,449.100375 991.217115,442.000135 M995.527115,672.000135 L915.657115,643.810135 C911.820884,642.433761 907.604002,642.573251 903.867115,644.200135 L861.307115,662.810135 C848.027115,668.610135 848.727115,687.610135 862.307115,692.500135 L910.997115,710.000135 L511.997115,916.170135 L111.277115,709.870135 L152.437115,695.080135 C165.827115,690.280135 166.717115,671.580135 153.837115,665.580135 L112.837115,646.370135 C109.008929,644.580285 104.630262,644.368356 100.647115,645.780135 L27.9971155,671.870135 C11.3473237,677.858232 0.19240487,693.586867 0.0471154616,711.280135 L0.0471154616,730.080135 C0.0632949619,745.406045 8.42616142,759.506405 21.8671155,766.870135 L470.707115,1013.47014 C483.376418,1020.36989 497.570829,1023.98983 511.997115,1024.00014 C526.111827,1023.98457 539.988079,1020.35974 552.307115,1013.47014 L1002.19712,766.870135 C1015.63034,759.501145 1023.98494,745.401803 1023.99712,730.080135 L1023.99712,712.470135 C1023.99712,694.324323 1012.60558,678.131732 995.527115,672.000135 M799.277301,336.480135 L799.277301,297.480135 C799.312025,287.231444 794.419143,277.590499 786.126499,271.568129 C777.833854,265.54576 767.152103,263.875935 757.417115,267.080135 L693.487115,288.000135 C680.330167,292.290121 671.421636,304.551456 671.407115,318.390135 L671.407115,359.390135 C671.416959,369.788712 676.478869,379.534105 684.980399,385.521966 C693.481929,391.509827 704.362857,392.993413 714.157115,389.500135 L778.097115,366.700135 C790.819287,362.10717 799.292115,350.02599 799.277301,336.500135\\" />
                              </svg>
                            </BuildIcon>
                          </Icon>
                        </div>
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </GridItem>
            <GridItem span={10}>
              <div className=\\"pf-l-grid__item pf-m-10-col\\" style={[undefined]}>
                <CardHeader>
                  <div className=\\"pf-c-card__header\\" id={[undefined]}>
                    <TextContent className=\\"hub-details-card-body\\">
                      <div className=\\"pf-c-content hub-details-card-body\\">
                        <Grid className=\\"hub-details-title\\">
                          <div className=\\"pf-l-grid hub-details-title\\" style={[undefined]}>
                            <GridItem span={11}>
                              <div className=\\"pf-l-grid__item pf-m-11-col\\" style={[undefined]}>
                                <List variant=\\"inline\\" style={{...}}>
                                  <ul style={{...}} className=\\"pf-c-list pf-m-inline\\">
                                    <ListItem>
                                      <li className=\\"\\">
                                        <Text className=\\"hub-details-resource-name\\">
                                          <p data-ouia-component-type=\\"PF4/Text\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Text-4\\" data-pf-content={true} className=\\"hub-details-resource-name\\">
                                            buildah
                                          </p>
                                        </Text>
                                      </li>
                                    </ListItem>
                                    <ListItem>
                                      <li className=\\"\\">
                                        <Icon id=\\"catalog\\" size=\\"lg\\" label=\\"tekton\\">
                                          <CatalogIcon size=\\"lg\\" className=\\"hub-icon\\" label=\\"tekton\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                            <svg style={{...}} fill=\\"currentColor\\" height=\\"2em\\" width=\\"2em\\" viewBox=\\"0 0 1088 1024\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" className=\\"hub-icon\\" label=\\"tekton\\">
                                              <path d=\\"M576,160 C687.3,88.6 874.6,32 960,32 L960,800 C898.8,783.1 738,760.5 576,864 L576,160 Z M1024,96 C1088,96 1088,162.8 1088,162.8 L1088,928 C1088,992 985.7,989.9 985.7,989.9 C863.1,804.7 576,992 576,992 L576,925.4 C863,728.7 1024,928 1024,928 L1024,96 Z M128,800 L128,32 C212.9,32 400.6,88.3 512,160 L512,864 C352,760.5 189.3,783.2 128,800 Z M512,925.4 L512,992 C512,992 227.9,805.8 102.5,989.9 C102.5,989.9 0,992 0,928 L0,162.8 C0,162.8 0,96 64,96 L64,928 C64,927.9 226,728.7 512,925.4 Z\\" />
                                            </svg>
                                          </CatalogIcon>
                                        </Icon>
                                      </li>
                                    </ListItem>
                                    <ListItem>
                                      <li className=\\"\\" />
                                    </ListItem>
                                  </ul>
                                </List>
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                        <a href=\\"https://github.com/tektoncd/catalog/tree/master/task/buildah/0.2/\\" target=\\"_\\" className=\\"hub-details-hyperlink\\">
                          <List variant=\\"inline\\" style={{...}}>
                            <ul style={{...}} className=\\"pf-c-list pf-m-inline\\">
                              <ListItem>
                                <li className=\\"\\">
                                  <Icon id=\\"github\\" size=\\"md\\" label=\\"Github\\">
                                    <GithubIcon size=\\"md\\" className=\\"hub-icon\\" label=\\"Github\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                      <svg style={{...}} fill=\\"currentColor\\" height=\\"1.5em\\" width=\\"1.5em\\" viewBox=\\"0 0 496 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" className=\\"hub-icon\\" label=\\"Github\\">
                                        <path d=\\"M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z\\" />
                                      </svg>
                                    </GithubIcon>
                                  </Icon>
                                </li>
                              </ListItem>
                              <ListItem>
                                <li className=\\"\\">
                                  <Text className=\\"hub-details-github\\">
                                    <p data-ouia-component-type=\\"PF4/Text\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Text-5\\" data-pf-content={true} className=\\"hub-details-github\\">
                                      Open 
                                      buildah
                                       in 
                                      Github
                                    </p>
                                  </Text>
                                </li>
                              </ListItem>
                            </ul>
                          </List>
                        </a>
                        <Grid>
                          <div className=\\"pf-l-grid\\" style={[undefined]}>
                            <GridItem span={10} className=\\"hub-details-description\\">
                              <div className=\\"pf-l-grid__item pf-m-10-col hub-details-description\\" style={[undefined]}>
                                <div className=\\"line\\">
                                  Buildah task builds source into a container image and then pushes it to a container registry.
                                </div>
                                <div>
                                  Buildah Task builds source into a container image using Project Atomic&#39;s Buildah build tool.It uses Buildah&#39;s support for building from Dockerfiles, using its buildah bud command.This command executes the directives in the Dockerfile to assemble a container image, then pushes that image to a container registry.
                                </div>
                              </div>
                            </GridItem>
                            <GridItem>
                              <div className=\\"pf-l-grid__item\\" style={[undefined]}>
                                <Badge className=\\"hub-tags\\">
                                  <span className=\\"pf-c-badge pf-m-unread hub-tags\\">
                                    image-build
                                  </span>
                                </Badge>
                              </div>
                            </GridItem>
                            <GridItem>
                              <div className=\\"pf-l-grid__item\\" style={[undefined]}>
                                <Badge className=\\"hub-platforms\\">
                                  <span className=\\"pf-c-badge pf-m-unread hub-platforms\\">
                                    linux/amd64
                                  </span>
                                </Badge>
                                <Badge className=\\"hub-platforms\\">
                                  <span className=\\"pf-c-badge pf-m-unread hub-platforms\\">
                                    linux/s390x
                                  </span>
                                </Badge>
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </TextContent>
                    <CardActions className=\\"hub-details-card-action\\">
                      <div className=\\"pf-c-card__actions hub-details-card-action\\">
                        <Grid>
                          <div className=\\"pf-l-grid\\" style={[undefined]}>
                            <GridItem offset={2} span={1}>
                              <div className=\\"pf-l-grid__item pf-m-1-col pf-m-offset-2-col\\" style={[undefined]}>
                                <Grid>
                                  <div className=\\"pf-l-grid\\" style={[undefined]}>
                                    <GridItem offset={3}>
                                      <div className=\\"pf-l-grid__item pf-m-offset-3-col\\" style={[undefined]}>
                                        <TooltipDisplay id=\\"star\\" size=\\"sm\\" name=\\"Average Rating\\">
                                          <Tooltip content={{...}}>
                                            <Popper trigger={{...}} reference={[undefined]} popper={{...}} popperMatchesTriggerWidth={false} appendTo={[Function: appendTo]} isVisible={false} positionModifiers={{...}} distance={15} placement=\\"top\\" onMouseEnter={[Function: show]} onMouseLeave={[Function: hide]} onFocus={[Function: show]} onBlur={[Function: hide]} onDocumentClick={false} onDocumentKeyDown={[Function: onDocumentKeyDown]} onTriggerEnter={[Function: onTriggerEnter]} enableFlip={true} zIndex={9999} flipBehavior={{...}}>
                                              <FindRefWrapper onFoundRef={[Function: onFoundRef]}>
                                                <Icon id=\\"star\\" size=\\"sm\\" label=\\"Average Rating\\">
                                                  <StarIcon size=\\"sm\\" label=\\"Average Rating\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                                    <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"Average Rating\\">
                                                      <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                                    </svg>
                                                  </StarIcon>
                                                </Icon>
                                              </FindRefWrapper>
                                            </Popper>
                                          </Tooltip>
                                        </TooltipDisplay>
                                      </div>
                                    </GridItem>
                                  </div>
                                </Grid>
                              </div>
                            </GridItem>
                            <GridItem span={1}>
                              <div className=\\"pf-l-grid__item pf-m-1-col\\" style={[undefined]}>
                                <Text>
                                  <p data-ouia-component-type=\\"PF4/Text\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Text-6\\" data-pf-content={true} className=\\"\\">
                                     
                                    4
                                  </p>
                                </Text>
                              </div>
                            </GridItem>
                            <GridItem className=\\"hub-details-rating__margin\\">
                              <div className=\\"pf-l-grid__item hub-details-rating__margin\\" style={[undefined]}>
                                <Memo(wrappedComponent)>
                                  <div className=\\"hub-details-rating\\">
                                    <form onClick={[Function: rateResource]}>
                                      <ul className=\\"hub-rate-area\\">
                                        <input readOnly={true} type=\\"radio\\" id=\\"5\\" name=\\"rating\\" value=\\"5\\" checked={false} />
                                        <label htmlFor=\\"5\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"5\\">
                                            <StarIcon size=\\"sm\\" label=\\"5\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"5\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"4\\" name=\\"rating\\" value=\\"4\\" checked={false} />
                                        <label htmlFor=\\"4\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"4\\">
                                            <StarIcon size=\\"sm\\" label=\\"4\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"4\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"3\\" name=\\"rating\\" value=\\"3\\" checked={false} />
                                        <label htmlFor=\\"3\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"3\\">
                                            <StarIcon size=\\"sm\\" label=\\"3\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"3\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"2\\" name=\\"rating\\" value=\\"2\\" checked={false} />
                                        <label htmlFor=\\"2\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"2\\">
                                            <StarIcon size=\\"sm\\" label=\\"2\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"2\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"1\\" name=\\"rating\\" value=\\"1\\" checked={false} />
                                        <label htmlFor=\\"1\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"1\\">
                                            <StarIcon size=\\"sm\\" label=\\"1\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"1\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                      </ul>
                                    </form>
                                  </div>
                                </Memo(wrappedComponent)>
                              </div>
                            </GridItem>
                            <GridItem className=\\"hub-details-rating__margin\\">
                              <div className=\\"pf-l-grid__item hub-details-rating__margin\\" style={[undefined]}>
                                <Button variant=\\"primary\\" className=\\"hub-details-button\\" onClick={[Function: onModalToggle]}>
                                  <ButtonBase innerRef={{...}} variant=\\"primary\\" className=\\"hub-details-button\\" onClick={[Function: onModalToggle]}>
                                    <button onClick={[Function: onModalToggle]} aria-disabled={false} aria-label={{...}} className=\\"pf-c-button pf-m-primary hub-details-button\\" disabled={false} tabIndex={[undefined]} type=\\"button\\" role={{...}} data-ouia-component-type=\\"PF4/Button\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Button-primary-2\\">
                                      Install
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </div>
                            </GridItem>
                            <GridItem className=\\"hub-details-rating__margin\\">
                              <div className=\\"pf-l-grid__item hub-details-rating__margin\\" style={[undefined]}>
                                <Dropdown toggle={{...}} dropdownItems={{...}} onSelect={[Function: onSelect]} isOpen={false}>
                                  <DropdownWithContext toggle={{...}} dropdownItems={{...}} isOpen={false} className=\\"\\" isPlain={false} isText={false} isGrouped={false} position=\\"left\\" direction=\\"down\\" onSelect={[Function: onSelect]} autoFocus={true} menuAppendTo=\\"inline\\">
                                    <div className=\\"pf-c-dropdown\\" data-ouia-component-type=\\"PF4/Dropdown\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Dropdown-2\\">
                                      <DropdownToggle onToggle={[Function: onToggle]} className=\\"hub-details-dropdown-item\\" parentRef={{...}} getMenuRef={[Function (anonymous)]} isOpen={false} id=\\"pf-dropdown-toggle-id-2\\" isPlain={false} isText={false} aria-haspopup={true} onEnter={[Function: onEnter]}>
                                        <Toggle onEnter={[Function: onEnter]} id=\\"pf-dropdown-toggle-id-2\\" className=\\"hub-details-dropdown-item\\" isOpen={false} parentRef={{...}} getMenuRef={[Function (anonymous)]} isActive={false} isDisabled={false} isPlain={false} isText={false} isPrimary={false} toggleVariant=\\"default\\" onToggle={[Function: onToggle]} aria-haspopup={true} data-ouia-component-type=\\"PF4/DropdownToggle\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-DropdownToggle-2\\" isSplitButton={false} bubbleEvent={false}>
                                          <button data-ouia-component-type=\\"PF4/DropdownToggle\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-DropdownToggle-2\\" id=\\"pf-dropdown-toggle-id-2\\" className=\\"pf-c-dropdown__toggle hub-details-dropdown-item\\" type=\\"button\\" onClick={[Function: onClick]} aria-expanded={false} aria-haspopup={true} onKeyDown={[Function: onKeyDown]} disabled={false}>
                                            <span className=\\"pf-c-dropdown__toggle-text\\">
                                              0.2 (latest)
                                            </span>
                                            <span className=\\"pf-c-dropdown__toggle-icon\\">
                                              <CaretDownIcon color=\\"currentColor\\" size=\\"sm\\" noVerticalAlign={false}>
                                                <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 320 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\">
                                                  <path d=\\"M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z\\" />
                                                </svg>
                                              </CaretDownIcon>
                                            </span>
                                          </button>
                                        </Toggle>
                                      </DropdownToggle>
                                    </div>
                                  </DropdownWithContext>
                                </Dropdown>
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </CardActions>
                  </div>
                </CardHeader>
              </div>
            </GridItem>
            <Modal width=\\"60%\\" title=\\"buildah\\" isOpen={false} onClose={[Function: onModalToggle]} className=\\"\\" titleIconVariant={{...}} titleLabel=\\"\\" aria-label=\\"\\" showClose={true} aria-describedby=\\"\\" aria-labelledby=\\"\\" id={[undefined]} actions={{...}} variant=\\"default\\" hasNoBodyWrapper={false} appendTo={[Function: appendTo]} ouiaSafe={true}>
              <Portal containerInfo={{...}}>
                <ModalContent width=\\"60%\\" isOpen={false} onClose={[Function: onModalToggle]} className=\\"\\" showClose={true} id={[undefined]} actions={{...}} variant=\\"default\\" hasNoBodyWrapper={false} boxId=\\"pf-modal-part-1\\" labelId=\\"pf-modal-part-2\\" descriptorId=\\"pf-modal-part-3\\" title=\\"buildah\\" titleIconVariant={{...}} titleLabel=\\"\\" aria-label=\\"\\" aria-describedby=\\"\\" aria-labelledby=\\"\\" ouiaId=\\"OUIA-Generated-Modal-default-2\\" ouiaSafe={true} />
              </Portal>
            </Modal>
          </div>
        </Grid>
      </article>
    </Card>
  </BasicDetails>
   
</Provider>"
`;

exports[`should render the BasicDetails component 1`] = `
"<Provider>
   
  <BasicDetails>
    <Card className=\\"hub-header-card\\">
      <article id=\\"\\" className=\\"pf-c-card hub-header-card\\" tabIndex={[undefined]} data-ouia-component-type=\\"PF4/Card\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Card-1\\">
        <Grid className=\\"hub-header-card__margin\\">
          <div className=\\"pf-l-grid hub-header-card__margin\\" style={[undefined]}>
            <GridItem span={1}>
              <div className=\\"pf-l-grid__item pf-m-1-col\\" style={[undefined]}>
                <Grid>
                  <div className=\\"pf-l-grid\\" style={[undefined]}>
                    <GridItem offset={8}>
                      <div className=\\"pf-l-grid__item pf-m-offset-8-col\\" style={[undefined]}>
                        <div className=\\"hub-details-kind-icon\\">
                          <Icon id=\\"build\\" size=\\"xl\\" label=\\"Task\\">
                            <BuildIcon size=\\"xl\\" className=\\"hub-icon\\" label=\\"Task\\" color=\\"currentColor\\" noVerticalAlign={false}>
                              <svg style={{...}} fill=\\"currentColor\\" height=\\"3em\\" width=\\"3em\\" viewBox=\\"0 0 1024 1024\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" className=\\"hub-icon\\" label=\\"Task\\">
                                <path d=\\"M996.377115,171.480135 L540.537115,5.18013521 C531.409589,1.76249044 521.743498,0.00809818406 511.997115,6.72397778e-05 C501.871295,-0.0125134433 491.820803,1.74040061 482.297115,5.18013521 L27.6671155,171.370135 C11.0249457,177.434467 -0.0238641555,193.287629 0.046775475,211.000135 L0.046775475,249.000135 C0.195841208,267.102495 11.623122,283.189328 28.6671155,289.290135 L85.2071155,309.500135 C95.0094893,313.010977 105.907101,311.533188 114.420477,305.53861 C122.933853,299.544031 127.998417,289.782269 127.997115,279.370135 L127.997115,234.580135 L511.997115,95.0001352 L895.177115,235.170135 L895.177115,295.370135 C895.178887,302.102977 898.453489,308.414744 903.95698,312.293243 C909.460471,316.171742 916.505874,317.132839 922.847115,314.870135 L995.477115,289.270135 C1012.59546,283.170258 1024.01857,266.9528 1023.99715,248.780135 L1023.99715,210.870135 C1023.97475,193.258354 1012.96683,177.531031 996.427115,171.480135 M533.647115,346.370135 L511.997115,353.370135 L489.587115,348.080135 C479.853994,344.894147 469.183221,346.571799 460.897291,352.59073 C452.611361,358.609661 447.71662,368.238859 447.737051,378.480135 L447.737051,417.580135 C447.725709,431.081528 456.204913,443.131767 468.917115,447.680135 L499.577115,458.180135 C507.177328,460.919505 515.534404,460.669293 522.957115,457.480135 L554.327115,445.870135 C567.027983,441.306886 575.500688,429.265885 575.507257,415.770135 L575.507257,376.770135 C575.537565,366.523106 570.643619,356.885253 562.352331,350.863869 C554.061043,344.842484 543.381903,343.17069 533.647115,346.370135 M351.737115,359.870135 L351.737115,318.770135 C351.726919,304.92777 342.817563,292.661266 329.657115,288.370135 L265.717115,267.480135 C255.985877,264.299431 245.319589,265.977891 237.035494,271.993509 C228.751399,278.009128 223.854266,287.632278 223.86709,297.870135 L223.86709,337.000135 C223.874371,350.47567 232.322855,362.502666 244.997115,367.080135 L308.937115,390.080135 C318.749212,393.583471 329.652547,392.090624 338.161859,386.078784 C346.67117,380.066943 351.720981,370.28887 351.697115,359.870135 M991.217115,442.000135 L856.317115,394.650135 C852.839791,393.339817 849.00444,393.339817 845.527115,394.650135 L798.077115,411.550135 C783.887115,416.550135 783.887115,436.650135 798.077115,441.650135 L913.157115,483.000135 L511.997115,646.780135 L109.477115,482.780135 L223.867115,441.780135 C237.947115,436.690135 237.947115,416.690135 223.867115,411.690135 L176.607115,394.780135 C173.112329,393.58999 169.321902,393.58999 165.827115,394.780135 L33.1571155,442.370135 C13.0440455,449.54441 -0.269196877,468.728185 0.0471154616,490.080135 L0.0471154616,503.080135 C-0.847277689,523.712017 11.059679,542.763147 29.9971155,551.000135 L476.407115,747.280135 C498.111167,756.808317 522.807966,756.840942 544.537115,747.370135 L802.537115,634.470135 L994.287115,549.930135 C1013.05026,541.718274 1024.80919,522.789452 1023.85712,502.330135 L1023.85712,489.430135 C1024.36395,468.22962 1011.19974,449.100375 991.217115,442.000135 M995.527115,672.000135 L915.657115,643.810135 C911.820884,642.433761 907.604002,642.573251 903.867115,644.200135 L861.307115,662.810135 C848.027115,668.610135 848.727115,687.610135 862.307115,692.500135 L910.997115,710.000135 L511.997115,916.170135 L111.277115,709.870135 L152.437115,695.080135 C165.827115,690.280135 166.717115,671.580135 153.837115,665.580135 L112.837115,646.370135 C109.008929,644.580285 104.630262,644.368356 100.647115,645.780135 L27.9971155,671.870135 C11.3473237,677.858232 0.19240487,693.586867 0.0471154616,711.280135 L0.0471154616,730.080135 C0.0632949619,745.406045 8.42616142,759.506405 21.8671155,766.870135 L470.707115,1013.47014 C483.376418,1020.36989 497.570829,1023.98983 511.997115,1024.00014 C526.111827,1023.98457 539.988079,1020.35974 552.307115,1013.47014 L1002.19712,766.870135 C1015.63034,759.501145 1023.98494,745.401803 1023.99712,730.080135 L1023.99712,712.470135 C1023.99712,694.324323 1012.60558,678.131732 995.527115,672.000135 M799.277301,336.480135 L799.277301,297.480135 C799.312025,287.231444 794.419143,277.590499 786.126499,271.568129 C777.833854,265.54576 767.152103,263.875935 757.417115,267.080135 L693.487115,288.000135 C680.330167,292.290121 671.421636,304.551456 671.407115,318.390135 L671.407115,359.390135 C671.416959,369.788712 676.478869,379.534105 684.980399,385.521966 C693.481929,391.509827 704.362857,392.993413 714.157115,389.500135 L778.097115,366.700135 C790.819287,362.10717 799.292115,350.02599 799.277301,336.500135\\" />
                              </svg>
                            </BuildIcon>
                          </Icon>
                        </div>
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </GridItem>
            <GridItem span={10}>
              <div className=\\"pf-l-grid__item pf-m-10-col\\" style={[undefined]}>
                <CardHeader>
                  <div className=\\"pf-c-card__header\\" id={[undefined]}>
                    <TextContent className=\\"hub-details-card-body\\">
                      <div className=\\"pf-c-content hub-details-card-body\\">
                        <Grid className=\\"hub-details-title\\">
                          <div className=\\"pf-l-grid hub-details-title\\" style={[undefined]}>
                            <GridItem span={11}>
                              <div className=\\"pf-l-grid__item pf-m-11-col\\" style={[undefined]}>
                                <List variant=\\"inline\\" style={{...}}>
                                  <ul style={{...}} className=\\"pf-c-list pf-m-inline\\">
                                    <ListItem>
                                      <li className=\\"\\">
                                        <Text className=\\"hub-details-resource-name\\">
                                          <p data-ouia-component-type=\\"PF4/Text\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Text-1\\" data-pf-content={true} className=\\"hub-details-resource-name\\">
                                            buildah
                                          </p>
                                        </Text>
                                      </li>
                                    </ListItem>
                                    <ListItem>
                                      <li className=\\"\\">
                                        <Icon id=\\"catalog\\" size=\\"lg\\" label=\\"tekton\\">
                                          <CatalogIcon size=\\"lg\\" className=\\"hub-icon\\" label=\\"tekton\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                            <svg style={{...}} fill=\\"currentColor\\" height=\\"2em\\" width=\\"2em\\" viewBox=\\"0 0 1088 1024\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" className=\\"hub-icon\\" label=\\"tekton\\">
                                              <path d=\\"M576,160 C687.3,88.6 874.6,32 960,32 L960,800 C898.8,783.1 738,760.5 576,864 L576,160 Z M1024,96 C1088,96 1088,162.8 1088,162.8 L1088,928 C1088,992 985.7,989.9 985.7,989.9 C863.1,804.7 576,992 576,992 L576,925.4 C863,728.7 1024,928 1024,928 L1024,96 Z M128,800 L128,32 C212.9,32 400.6,88.3 512,160 L512,864 C352,760.5 189.3,783.2 128,800 Z M512,925.4 L512,992 C512,992 227.9,805.8 102.5,989.9 C102.5,989.9 0,992 0,928 L0,162.8 C0,162.8 0,96 64,96 L64,928 C64,927.9 226,728.7 512,925.4 Z\\" />
                                            </svg>
                                          </CatalogIcon>
                                        </Icon>
                                      </li>
                                    </ListItem>
                                    <ListItem>
                                      <li className=\\"\\" />
                                    </ListItem>
                                  </ul>
                                </List>
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                        <a href=\\"https://github.com/tektoncd/catalog/tree/master/task/buildah/0.2/\\" target=\\"_\\" className=\\"hub-details-hyperlink\\">
                          <List variant=\\"inline\\" style={{...}}>
                            <ul style={{...}} className=\\"pf-c-list pf-m-inline\\">
                              <ListItem>
                                <li className=\\"\\">
                                  <Icon id=\\"github\\" size=\\"md\\" label=\\"Github\\">
                                    <GithubIcon size=\\"md\\" className=\\"hub-icon\\" label=\\"Github\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                      <svg style={{...}} fill=\\"currentColor\\" height=\\"1.5em\\" width=\\"1.5em\\" viewBox=\\"0 0 496 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" className=\\"hub-icon\\" label=\\"Github\\">
                                        <path d=\\"M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z\\" />
                                      </svg>
                                    </GithubIcon>
                                  </Icon>
                                </li>
                              </ListItem>
                              <ListItem>
                                <li className=\\"\\">
                                  <Text className=\\"hub-details-github\\">
                                    <p data-ouia-component-type=\\"PF4/Text\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Text-2\\" data-pf-content={true} className=\\"hub-details-github\\">
                                      Open 
                                      buildah
                                       in 
                                      Github
                                    </p>
                                  </Text>
                                </li>
                              </ListItem>
                            </ul>
                          </List>
                        </a>
                        <Grid>
                          <div className=\\"pf-l-grid\\" style={[undefined]}>
                            <GridItem span={10} className=\\"hub-details-description\\">
                              <div className=\\"pf-l-grid__item pf-m-10-col hub-details-description\\" style={[undefined]}>
                                <div className=\\"line\\">
                                  Buildah task builds source into a container image and then pushes it to a container registry.
                                </div>
                                <div>
                                  Buildah Task builds source into a container image using Project Atomic&#39;s Buildah build tool.It uses Buildah&#39;s support for building from Dockerfiles, using its buildah bud command.This command executes the directives in the Dockerfile to assemble a container image, then pushes that image to a container registry.
                                </div>
                              </div>
                            </GridItem>
                            <GridItem>
                              <div className=\\"pf-l-grid__item\\" style={[undefined]}>
                                <Badge className=\\"hub-tags\\">
                                  <span className=\\"pf-c-badge pf-m-unread hub-tags\\">
                                    image-build
                                  </span>
                                </Badge>
                              </div>
                            </GridItem>
                            <GridItem>
                              <div className=\\"pf-l-grid__item\\" style={[undefined]} />
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </TextContent>
                    <CardActions className=\\"hub-details-card-action\\">
                      <div className=\\"pf-c-card__actions hub-details-card-action\\">
                        <Grid>
                          <div className=\\"pf-l-grid\\" style={[undefined]}>
                            <GridItem offset={2} span={1}>
                              <div className=\\"pf-l-grid__item pf-m-1-col pf-m-offset-2-col\\" style={[undefined]}>
                                <Grid>
                                  <div className=\\"pf-l-grid\\" style={[undefined]}>
                                    <GridItem offset={3}>
                                      <div className=\\"pf-l-grid__item pf-m-offset-3-col\\" style={[undefined]}>
                                        <TooltipDisplay id=\\"star\\" size=\\"sm\\" name=\\"Average Rating\\">
                                          <Tooltip content={{...}}>
                                            <Popper trigger={{...}} reference={[undefined]} popper={{...}} popperMatchesTriggerWidth={false} appendTo={[Function: appendTo]} isVisible={false} positionModifiers={{...}} distance={15} placement=\\"top\\" onMouseEnter={[Function: show]} onMouseLeave={[Function: hide]} onFocus={[Function: show]} onBlur={[Function: hide]} onDocumentClick={false} onDocumentKeyDown={[Function: onDocumentKeyDown]} onTriggerEnter={[Function: onTriggerEnter]} enableFlip={true} zIndex={9999} flipBehavior={{...}}>
                                              <FindRefWrapper onFoundRef={[Function: onFoundRef]}>
                                                <Icon id=\\"star\\" size=\\"sm\\" label=\\"Average Rating\\">
                                                  <StarIcon size=\\"sm\\" label=\\"Average Rating\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                                    <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"Average Rating\\">
                                                      <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                                    </svg>
                                                  </StarIcon>
                                                </Icon>
                                              </FindRefWrapper>
                                            </Popper>
                                          </Tooltip>
                                        </TooltipDisplay>
                                      </div>
                                    </GridItem>
                                  </div>
                                </Grid>
                              </div>
                            </GridItem>
                            <GridItem span={1}>
                              <div className=\\"pf-l-grid__item pf-m-1-col\\" style={[undefined]}>
                                <Text>
                                  <p data-ouia-component-type=\\"PF4/Text\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Text-3\\" data-pf-content={true} className=\\"\\">
                                     
                                    4
                                  </p>
                                </Text>
                              </div>
                            </GridItem>
                            <GridItem className=\\"hub-details-rating__margin\\">
                              <div className=\\"pf-l-grid__item hub-details-rating__margin\\" style={[undefined]}>
                                <Memo(wrappedComponent)>
                                  <div className=\\"hub-details-rating\\">
                                    <form onClick={[Function: rateResource]}>
                                      <ul className=\\"hub-rate-area\\">
                                        <input readOnly={true} type=\\"radio\\" id=\\"5\\" name=\\"rating\\" value=\\"5\\" checked={false} />
                                        <label htmlFor=\\"5\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"5\\">
                                            <StarIcon size=\\"sm\\" label=\\"5\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"5\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"4\\" name=\\"rating\\" value=\\"4\\" checked={false} />
                                        <label htmlFor=\\"4\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"4\\">
                                            <StarIcon size=\\"sm\\" label=\\"4\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"4\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"3\\" name=\\"rating\\" value=\\"3\\" checked={false} />
                                        <label htmlFor=\\"3\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"3\\">
                                            <StarIcon size=\\"sm\\" label=\\"3\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"3\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"2\\" name=\\"rating\\" value=\\"2\\" checked={false} />
                                        <label htmlFor=\\"2\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"2\\">
                                            <StarIcon size=\\"sm\\" label=\\"2\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"2\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                        <input readOnly={true} type=\\"radio\\" id=\\"1\\" name=\\"rating\\" value=\\"1\\" checked={false} />
                                        <label htmlFor=\\"1\\">
                                          <Icon id=\\"star\\" size=\\"sm\\" label=\\"1\\">
                                            <StarIcon size=\\"sm\\" label=\\"1\\" color=\\"currentColor\\" noVerticalAlign={false}>
                                              <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 576 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\" label=\\"1\\">
                                                <path d=\\"M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z\\" />
                                              </svg>
                                            </StarIcon>
                                          </Icon>
                                        </label>
                                      </ul>
                                    </form>
                                  </div>
                                </Memo(wrappedComponent)>
                              </div>
                            </GridItem>
                            <GridItem className=\\"hub-details-rating__margin\\">
                              <div className=\\"pf-l-grid__item hub-details-rating__margin\\" style={[undefined]}>
                                <Button variant=\\"primary\\" className=\\"hub-details-button\\" onClick={[Function: onModalToggle]}>
                                  <ButtonBase innerRef={{...}} variant=\\"primary\\" className=\\"hub-details-button\\" onClick={[Function: onModalToggle]}>
                                    <button onClick={[Function: onModalToggle]} aria-disabled={false} aria-label={{...}} className=\\"pf-c-button pf-m-primary hub-details-button\\" disabled={false} tabIndex={[undefined]} type=\\"button\\" role={{...}} data-ouia-component-type=\\"PF4/Button\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Button-primary-1\\">
                                      Install
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </div>
                            </GridItem>
                            <GridItem className=\\"hub-details-rating__margin\\">
                              <div className=\\"pf-l-grid__item hub-details-rating__margin\\" style={[undefined]}>
                                <Dropdown toggle={{...}} dropdownItems={{...}} onSelect={[Function: onSelect]} isOpen={false}>
                                  <DropdownWithContext toggle={{...}} dropdownItems={{...}} isOpen={false} className=\\"\\" isPlain={false} isText={false} isGrouped={false} position=\\"left\\" direction=\\"down\\" onSelect={[Function: onSelect]} autoFocus={true} menuAppendTo=\\"inline\\">
                                    <div className=\\"pf-c-dropdown\\" data-ouia-component-type=\\"PF4/Dropdown\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-Dropdown-1\\">
                                      <DropdownToggle onToggle={[Function: onToggle]} className=\\"hub-details-dropdown-item\\" parentRef={{...}} getMenuRef={[Function (anonymous)]} isOpen={false} id=\\"pf-dropdown-toggle-id-0\\" isPlain={false} isText={false} aria-haspopup={true} onEnter={[Function: onEnter]}>
                                        <Toggle onEnter={[Function: onEnter]} id=\\"pf-dropdown-toggle-id-0\\" className=\\"hub-details-dropdown-item\\" isOpen={false} parentRef={{...}} getMenuRef={[Function (anonymous)]} isActive={false} isDisabled={false} isPlain={false} isText={false} isPrimary={false} toggleVariant=\\"default\\" onToggle={[Function: onToggle]} aria-haspopup={true} data-ouia-component-type=\\"PF4/DropdownToggle\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-DropdownToggle-1\\" isSplitButton={false} bubbleEvent={false}>
                                          <button data-ouia-component-type=\\"PF4/DropdownToggle\\" data-ouia-safe={true} data-ouia-component-id=\\"OUIA-Generated-DropdownToggle-1\\" id=\\"pf-dropdown-toggle-id-0\\" className=\\"pf-c-dropdown__toggle hub-details-dropdown-item\\" type=\\"button\\" onClick={[Function: onClick]} aria-expanded={false} aria-haspopup={true} onKeyDown={[Function: onKeyDown]} disabled={false}>
                                            <span className=\\"pf-c-dropdown__toggle-text\\">
                                              0.2 (latest)
                                            </span>
                                            <span className=\\"pf-c-dropdown__toggle-icon\\">
                                              <CaretDownIcon color=\\"currentColor\\" size=\\"sm\\" noVerticalAlign={false}>
                                                <svg style={{...}} fill=\\"currentColor\\" height=\\"1em\\" width=\\"1em\\" viewBox=\\"0 0 320 512\\" aria-labelledby={{...}} aria-hidden={true} role=\\"img\\">
                                                  <path d=\\"M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z\\" />
                                                </svg>
                                              </CaretDownIcon>
                                            </span>
                                          </button>
                                        </Toggle>
                                      </DropdownToggle>
                                    </div>
                                  </DropdownWithContext>
                                </Dropdown>
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </CardActions>
                  </div>
                </CardHeader>
              </div>
            </GridItem>
            <Modal width=\\"60%\\" title=\\"buildah\\" isOpen={false} onClose={[Function: onModalToggle]} className=\\"\\" titleIconVariant={{...}} titleLabel=\\"\\" aria-label=\\"\\" showClose={true} aria-describedby=\\"\\" aria-labelledby=\\"\\" id={[undefined]} actions={{...}} variant=\\"default\\" hasNoBodyWrapper={false} appendTo={[Function: appendTo]} ouiaSafe={true}>
              <Portal containerInfo={{...}}>
                <ModalContent width=\\"60%\\" isOpen={false} onClose={[Function: onModalToggle]} className=\\"\\" showClose={true} id={[undefined]} actions={{...}} variant=\\"default\\" hasNoBodyWrapper={false} boxId=\\"pf-modal-part-0\\" labelId=\\"pf-modal-part-1\\" descriptorId=\\"pf-modal-part-2\\" title=\\"buildah\\" titleIconVariant={{...}} titleLabel=\\"\\" aria-label=\\"\\" aria-describedby=\\"\\" aria-labelledby=\\"\\" ouiaId=\\"OUIA-Generated-Modal-default-1\\" ouiaSafe={true} />
              </Portal>
            </Modal>
          </div>
        </Grid>
      </article>
    </Card>
  </BasicDetails>
   
</Provider>"
`;
